<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.hpspells</groupId>
	<artifactId>core</artifactId>
	<version>1.3.1</version>
	<name>HarryPotterSpells</name>
	<description>As the name suggests, this plugin adds spells and more to a Minecraft server running Bukkit/Spigot.</description>
	<build>
		<finalName>${project.name}-${project.version}-${v}</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-assembly-plugin</artifactId>
			    <version>3.7.1</version>
			    <executions>
			        <execution>
			            <phase>package</phase>
			            <goals>
			                <goal>single</goal>
			            </goals>
			            <configuration>
			                <archive>
			                <manifest>
			                    <mainClass>
			                        com.baeldung.executable.ExecutableMavenJar
			                    </mainClass>
			                </manifest>
			                </archive>
			                <descriptorRefs>
			                    <descriptorRef>jar-with-dependencies</descriptorRef>
			                </descriptorRefs>
			                <appendAssemblyId>false</appendAssemblyId>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
		</plugins>
		<resources>
		    <resource>
		        <targetPath>${basedir}/target/classes</targetPath>
		        <directory>${basedir}/src/main/resources</directory>
		        <filtering>true</filtering>
		        <includes>
					<include>plugin.yml</include>
				</includes>
		    </resource>
		</resources>
	</build>
	<repositories>
		<repository>
			<id>SpigotMC</id>
			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.20-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>